# myprofiler-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: main.rs
