[package]
name = "myprofiler"
version = "0.1.0"
authors = ["Hideo Hattori <hattori-h@klab.com>"]
edition = "2021"

[dependencies]
mysql = "23"
getopts = "0.2"
users = "0.7"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
regex = "1"
once_cell = "1"

[dependencies.lazy_static]
git = "https://github.com/rust-lang-nursery/lazy-static.rs"
